--- a/src/config/env.example
+++ b/src/config/env.example
@@ -14,14 +14,21 @@ CLIENT_ID=
 CLIENT_SECRET=
 
 # ========================
-# ☁️ Google Cloud Settings
+# ☁️ Google Cloud / Vertex AI Settings
 # ========================
 
-GOOGLE_CLOUD_PROJECT=
-GOOGLE_CLOUD_LOCATION=
+PROJECT_ID=digitalhuman-445007
+LOCATION=us-east4
+MODEL=gemini-2.0-flash-001
 
 # ========================
 # 📚 RAG Configuration
 # ========================
 
-RAG_CORPUS=
+RAG_CORPUS_NAME=projects/digitalhuman-445007/locations/us-east4/ragCorpora/7991637538768945152
+
+# ========================
+# 📊 Google Sheets Integration
+# ========================
+
+SHEETS_BASE_URL=https://us-central1-digitalhuman-445007.cloudfunctions.net/sheet-assistant
