--- a/.gitignore
+++ b/.gitignore
@@ -1,105 +1,38 @@
-# Environment variables and sensitive configuration
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-*.env
-.env.*
-
-# API Keys and secrets
-secrets/
-config/secrets.json
-*.key
-*.pem
-*.p12
-*.pfx
-
-# Python
 __pycache__/
 *.py[cod]
 *$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
 
 # Virtual environments
+.venv/
 venv/
 env/
 ENV/
-env.bak/
-venv.bak/
-.venv/
 
-# IDE and editor files
-.vscode/settings.json
-.vscode/launch.json
-.vscode/tasks.json
-.vscode/.ropeproject
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Build artifacts
+dist/
+build/
+*.egg-info/
 
 # Logs
 *.log
-logs/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
+# IDE settings
+.vscode/
+.idea/
 
-# Temporary files
-*.tmp
-*.temp
-temp/
-tmp/
+# Local environment and secrets
+.env
+*.env
+.env.*
+.envrc
+src/config/.env
+src/config/*.env
+config/.env
+config/*.env
+*.key
+*.pem
+*token*
 
-# Cache directories
-.cache/
-.pytest_cache/
-.coverage
-htmlcov/
-
-# AI/ML specific
-model/
-*.pkl
-*.model
-*.h5
-checkpoints/
-tensorboard_logs/
-
-# Local configuration
-local_settings.py
-instance/
-.webassets-cache
+# OS-generated files
+.DS_Store
+Thumbs.db
